--- a/config/database.yml
+++ b/config/database.yml
@@ -1,36 +1,16 @@
+default: &default
+  adapter: sqlite3
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  timeout: 5000
+
 development:
-  adapter: mysql2
-  encoding: utf8mb4
-  database: hamers
-  username: hamers
-  password: hamers
-  host: 127.0.0.1
+  <<: *default
+  database: db/development.sqlite3
 
 test:
-  adapter: mysql2
-  encoding: utf8mb4
-  database: hamers_test
-  username: hamers
-  password: hamers
-  host: 127.0.0.1
-  strict: false
-
-staging:
-  adapter: mysql2
-  encoding: utf8mb4
-  host: localhost
-  database: hamers_staging
-  pool: 5
-  username: hamers
-  password: <%= Rails.application.secrets.database_password %>
-  socket: /var/run/mysqld/mysqld.sock
+  <<: *default
+  database: db/test.sqlite3
 
 production:
-  adapter: mysql2
-  encoding: utf8mb4
-  host: localhost
-  database: hamers
-  pool: 5
-  username: hamers
-  password: <%= Rails.application.secrets.database_password %>
-  socket: /var/run/mysqld/mysqld.sock
+  <<: *default
+  database: db/production.sqlite3
