--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,22 +27,13 @@ jobs:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true
 
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts
+          cache: "yarn"
+
       - name: Set up database
         run: bundle exec rails db:setup
-
-      - name: Get yarn cache directory
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - name: Use yarn cache
-        uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-
-      - name: yarn install
-        run: yarn install --prefer-offline --frozen-lockfile --check-files
 
       - name: Procompile assets
         run: bundle exec rails assets:precompile NODE_OPTIONS="--openssl-legacy-provider"
