--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: lts
+          node-version: "lts/*"
           cache: "yarn"
 
       - name: Set up database
