--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,21 +5,25 @@ one:
   name: Hamer Tester
   email: testhamer@zondersikkel.nl
   otp_required_for_login: true
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
 
 two:
   id: 2
   name: Hamer Tester 2
   email: testhamer2@zondersikkel.nl
   otp_required_for_login: true
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
 
 three:
   id: 3
   name: Hamer Tester 3
   email: testhamer3@zondersikkel.nl
   otp_required_for_login: true
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
 
 four:
   id: 4
   name: Hamer Tester 4
   email: testhamer4@zondersikkel.nl
   otp_required_for_login: true
+  encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
