`frontend` -> `javascript` as per instruction

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -1,7 +1,7 @@
 # Note: You must restart bin/webpack-dev-server for changes to take effect
 
 default: &default
-  source_path: app/frontend
+  source_path: app/javascript
   source_entry_path: packs
   public_root_path: public
   public_output_path: packs
@@ -35,7 +35,11 @@ default: &default
   extensions:
     - .mjs
     - .js
+    - .sass
+    - .scss
     - .css
+    - .module.sass
+    - .module.scss
     - .module.css
     - .png
     - .svg
