--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "@hotwired/turbo-rails": "^7.0.1",
     "@rails/actiontext": "^6.1.4-1",
     "@rails/ujs": "^6.1.4-1",
-    "@rails/webpacker": "^5.4.3",
+    "@rails/webpacker": "5.4.3",
     "@tailwindcss/forms": "^0.3.3",
     "autoprefixer": "^9",
     "core-js": "^3.8.0",
@@ -26,6 +26,6 @@
   },
   "devDependencies": {
     "resolve-url-loader": "^3.1.2",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^3"
   }
 }
