--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,8 @@ jobs:
       matrix:
         ruby-version: ["3.3.6"]
     steps:
+      env:
+        RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
       - uses: actions/checkout@v3
 
       - name: Set up ruby
