--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -40,7 +40,7 @@ aliases:
   console: app exec --interactive --reuse "rails console"
   shell: app exec --interactive --reuse "bash"
 
-asset_path: /app/app/assets
+asset_path: /webapp/public/assets
 
-# volumes:
-#   - "app_storage:/app/storage"
+volumes:
+ - db:/webapp/db
