--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -11,9 +11,9 @@ proxy:
   ssl: false
   host: 130.89.148.88
   app_port: 3000
+  response_timeout: 90
   healthcheck:
     path: /
-    timeout: 90
 
 registry:
   server: ghcr.io
