--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -11,9 +11,10 @@ proxy:
   ssl: false
   host: 130.89.148.88
   app_port: 3000
-  response_timeout: 90
+  response_timeout: 300
   healthcheck:
     path: /
+    timeout: 300
 
 registry:
   server: ghcr.io
