--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
           ssh-private-key: ${{ secrets.PRIVATE_KEY }}
 
       - name: "Kamal 🐪"
-        run: kamal deploy
+        run: echo This is where we would run kamal deploy
