--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -31,12 +31,7 @@ env:
     RAILS_ENV: production
     RAILS_LOG_TO_STDOUT: true
   secret:
-    - SECRET_KEY_BASE
-    - OTP_SECRET
-    - LOCKBOX_MASTER_KEY
-    - SMTP_PASSWORD
-    - GOOGLE_API_KEY
-    - HONEYBADGER_API_KEY
+    - RAILS_MASTER_KEY
 
 aliases:
   console: app exec --interactive --reuse "rails console"
