Fix for storage as well

--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -41,6 +41,8 @@ aliases:
   shell: app exec --interactive --reuse "bash"
   db: app exec --interactive --reuse "rails dbconsole"
 
+retain_containers: 3
+
 volumes:
  - /app/db:/webapp/db
  - /app/log:/webapp/log # includes cron logs
