--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -40,7 +40,7 @@ env:
   clear:
     RAILS_ENV: production
     RAILS_LOG_TO_STDOUT: true
-    MAINTENANCE_MODE: true
+    MAINTENANCE_MODE: false
   secret:
     - RAILS_MASTER_KEY
 
@@ -55,6 +55,6 @@ aliases:
 retain_containers: 4
 
 volumes:
- - /app/db/production.sqlite3:/webapp/db/production.sqlite3
+ - /app/db:/webapp/db
  - /app/log:/webapp/log # includes cron logs
  - /app/storage:/webapp/storage
